k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app
spec:
  selector:
    app: simple-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
