k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web-app-ingress
spec:
  rules:
  - host: simple-web-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-web-app
            port:
              number: 80
